--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<h3>About</h3>
 
 					
-					<p>I'm Derek Onken, a PhD Candidate in the Computer Science and Informatics Program at Emory University. I focus on data-intensive problems, especially those with biological motivation. My strengths lie in mathematical approaches to data analysis.</p>
+					<p>I'm Derek Onken, a PhD Candidate in the Computer Science and Informatics Program at Emory University. I focus on data-intensive problems, ranging from the mathematical theory to implementation, especially for application to problems with biological motivation.</p>
 
-                    <p>(Such approaches include the following buzzwords: machine learning, deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization.)</p>
+                    <p>(Such approaches include the following buzzwords: machine learning, deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows)</p>
 					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
 
 
@@ -92,13 +92,15 @@
 					<h3> Research </h3>
 						<p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/"> Lars Ruthotto </a>.</b> (2018 - present)
 						<br/>
-                        Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures. More specifically, we ask if current reliance on gradient-based methods necessarily results in the most efficient training, question the stability of presented problems and the ability of current architectures to handle ill-posed problems, and view current architectures from a scientific computing perspective.</p> <!--Most current experiments involve applications of higher-order schemes, bound constraints, and the Discretize-Optimize approach.-->
+                        Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, bound constraints, and the Discretize-Optimize approach (<a href="https://github.com/EmoryMLIP/DynamicBlocks">public code</a>). We also are interested in developing methods for lowering computational cost of continuous normalizing flows.
+
+                        <!--More specifically, we ask if current reliance on gradient-based methods necessarily results in the most efficient training, question the stability of presented problems and the ability of current architectures to handle ill-posed problems, and view current architectures from a scientific computing perspective.</p> Most current experiments involve applications of higher-order schemes, bound constraints, and the Discretize-Optimize approach.-->
 						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App with <a href="http://www.mathcs.emory.edu/~eugene/"> Eugene Agichtein </a> as part of his  <a href="https://github.com/emory-irlab">IRLAB</a>.</b> (2017)
 						<br/>
 						Collecting and analyzing voice data, touch pressure, and rest tremor to detect Parkinson's disease symptoms via remote patient monitoring. Building machine learning classifier using motor and vocal features extracted from these patients.
 						</p>
 						
-						<p> <b> Using <a href="https://simbiosyslab.github.io/projects/dataScience-cdr"> CDR </a> data from H1N1 outbreak to predict future disease outbreaks with <a href="http://ymsir.com/"> Ymir Vigfusson </a>.</b> (2016-2019)
+						<p> <b> Using <a href="https://simbiosyslab.github.io/projects/dataScience-cdr"> CDR </a> data from H1N1 outbreak to predict future disease outbreaks with <a href="http://ymsir.com/"> Ymir Vigfusson </a></b> (2016-2019)
 
 						<br/>
 						Our dataset contians cellphone data from the H1N1 outbreak in 2009-2010 and linked health data. We develop a classifier to determine/predict sickness based on human behavior changes around Date of Diagnosis. Motivation: give health officials a more real-time and accurate estimation of sick individuals as an outbreak is occuring.
@@ -114,6 +116,26 @@
 						Exploration of MPI, CUDA, and OpenCL. Application of MPI to Geneset Enrichment Analysis (GSEA).
 						</p>
 
+						<b>
+						<h3> Preprints</h3>
+						D Onken, S Wu Fung, X Li, L Ruthotto.
+						OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport. 2020. <a href="https://arxiv.org/abs/2006.00104">preprint</a>
+						</br> 
+						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. 2020. <a href="https://arxiv.org/abs/2005.13420">preprint</a> 
+						</b>
+
+
+						<h3> &nbsp; </h3>
+						<b>
+						<h3>Past Presentations</h3>
+		                SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf">slides</a>
+		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf">poster</a>
+	                    </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf">slides</a>
+		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf">poster</a>
+		                </br> Amazon Graduate Research Symposium, Oct 2017, <a href="./2017AmazonPoster.pdf">poster</a>
+		                </b>
+
+
 				</div>
 			</section>
 
@@ -122,7 +144,8 @@
 				<div class="container">
 				<h3> &nbsp; </h3>
 					<h3>Work Experience</h3>
-					<p>   <b> Summer 2019: &ensp;              Graduate Data Science Intern for United Health Group </b>  
+					<p>   <b> Summer 2020: &ensp;              Graduate Data Science Intern for United Health Group </b> 
+					<br/> <b> Summer 2019: &ensp;              Graduate Data Science Intern for United Health Group </b>  
 					<br/> <b> Summer 2018: &ensp;              High Performance Computing Intern for Air Force Research Labs </b>  
 					<br/> <b> Spring 2018: &ensp; &ensp;       TA for Dr. Li Xiong's Data Mining (CS378) </b>
 					<br/> <b> Fall 2017: &emsp; &ensp; &ensp;  Lab Instructor for Dr. Lars Ruthotto's Numerical Analysis (MATH315)
@@ -139,14 +162,7 @@
                         <!-- <iframe allowfullscreen webkitallowfullscreen mozallowfullscreen id='iframe' src='http://www.oculu.com/im4/im_embed.php?id=1556919860&title=WF637180_CollegeProgram_Optum_DerekO_Final' scrolling='no' frameborder='0' height='100%' width='100%'></iframe> -->
                 </div> 
 
-
-
-
-
 			</section>
-
-
-			
 
 			<!-- Four -->
 			<section id="four">
@@ -167,17 +183,17 @@
 				</div>
 			</section>
 
+
 			<!-- Five -->
 			<section id="five">
 				<div class="container">
+
+					</br>
+					</br>
 					<h3>Other</h3>
 						This is my <a href="./OnkenCV.pdf">CV</a>.
 						<br/>Here are some <a href="./fun.html">Fun Links</a>.
-						</br>
-		                </br> Some Research Presentations/Materials:
-		                </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf">slides</a>
-		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf">poster</a>
-		                </br> Amazon Graduate Research Symposium, Oct 2017, <a href="./2017AmazonPoster.pdf">poster</a>
+
 				</div>
 			</section>
 
