--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
 				<div class="container">
 					<h3> &nbsp; </h3>
 					<h3> Research </h3>
-						<p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/"> Lars Ruthotto </a>.</b> (2018 - present)
+						<p> <b> PDE-based Machine Learning with <a href="http://www.mathcs.emory.edu/~lruthot/" target="_blank"> Lars Ruthotto </a>.</b> (2018 - present)
 						<br/>
-                        Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, bound constraints, and the Discretize-Optimize approach (<a href="https://github.com/EmoryMLIP/DynamicBlocks">public code</a>). We also are interested in developing methods for lowering computational cost of continuous normalizing flows.
+                        Applying knowledge of optimizers and partial differential equation solvers to machine learning architectures (also known as neural differential equations). More specifically, we explore higher-order schemes, bound constraints, and the Discretize-Optimize approach (<a href="https://github.com/EmoryMLIP/DynamicBlocks" target="_blank">public code</a>). We also are interested in developing methods for lowering computational cost of continuous normalizing flows.
 
                         <!--More specifically, we ask if current reliance on gradient-based methods necessarily results in the most efficient training, question the stability of presented problems and the ability of current architectures to handle ill-posed problems, and view current architectures from a scientific computing perspective.</p> Most current experiments involve applications of higher-order schemes, bound constraints, and the Discretize-Optimize approach.-->
-						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App with <a href="http://www.mathcs.emory.edu/~eugene/"> Eugene Agichtein </a> as part of his  <a href="https://github.com/emory-irlab">IRLAB</a>.</b> (2017)
+						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App with <a href="http://www.mathcs.emory.edu/~eugene/" target="_blank"> Eugene Agichtein </a> as part of his  <a href="https://github.com/emory-irlab" target="_blank">IRLAB</a>.</b> (2017)
 						<br/>
 						Collecting and analyzing voice data, touch pressure, and rest tremor to detect Parkinson's disease symptoms via remote patient monitoring. Building machine learning classifier using motor and vocal features extracted from these patients.
 						</p>
 						
-						<p> <b> Using <a href="https://simbiosyslab.github.io/projects/dataScience-cdr"> CDR </a> data from H1N1 outbreak to predict future disease outbreaks with <a href="http://ymsir.com/"> Ymir Vigfusson </a></b> (2016-2019)
+						<p> <b> Using CDR data from H1N1 outbreak to predict future disease outbreaks with Ymir Vigfusson </a></b> (2016-2019)
 
 						<br/>
 						Our dataset contians cellphone data from the H1N1 outbreak in 2009-2010 and linked health data. We develop a classifier to determine/predict sickness based on human behavior changes around Date of Diagnosis. Motivation: give health officials a more real-time and accurate estimation of sick individuals as an outbreak is occuring.
 						</p>
 						
-							<p> <b> Lunar study with <a href="http://euler.math.uga.edu/cms/People/Juan-B-Gutierrez"> Juan B. Gutierrez </a> in the <a href="http://euler.math.uga.edu/cms/">Biomathematics Research Group</a>.</b> (2014-2016)
+						<p> <b> Lunar study with Juan B. Gutierrez in the Biomathematics Research Group.</b> (2014-2016)
 						<br/>
 						Analysis of 56 million natality records and sex ratio correlations.
 						</p>
 
-						<p> <b> Comparison of Parallelization Methods with <a href="http://euler.math.uga.edu/cms/People/Juan-B-Gutierrez"> Juan B. Gutierrez </a> in the <a href="http://euler.math.uga.edu/cms/">Biomathematics Research Group</a>.</b> (2014)
+						<p> <b> Comparison of Parallelization Methods with Juan B. Gutierrez in the Biomathematics Research Group</a>.</b> (2014)
 						<br/>
 						Exploration of MPI, CUDA, and OpenCL. Application of MPI to Geneset Enrichment Analysis (GSEA).
 						</p>
@@ -119,20 +119,20 @@
 						<b>
 						<h3> Preprints</h3>
 						D Onken, S Wu Fung, X Li, L Ruthotto.
-						OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport. 2020. <a href="https://arxiv.org/abs/2006.00104">preprint</a>
+						OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport. 2020. <a href="https://arxiv.org/abs/2006.00104" target="_blank">preprint</a>
 						</br> 
-						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. 2020. <a href="https://arxiv.org/abs/2005.13420">preprint</a> 
+						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. 2020. <a href="https://arxiv.org/abs/2005.13420" target="_blank">preprint</a> 
 						</b>
 
 
 						<h3> &nbsp; </h3>
 						<b>
 						<h3>Past Presentations</h3>
-		                SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf">slides</a>
-		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf">poster</a>
-	                    </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf">slides</a>
-		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf">poster</a>
-		                </br> Amazon Graduate Research Symposium, Oct 2017, <a href="./2017AmazonPoster.pdf">poster</a>
+		                SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
+		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a>
+	                    </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a>
+		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf" target="_blank">poster</a>
+		                </br> Amazon Graduate Research Symposium, Oct 2017, <a href="./2017AmazonPoster.pdf" target="_blank">poster</a>
 		                </b>
 
 
