added HOW TO guides

--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
 						This is my <a href="./OnkenCV.pdf">CV</a>.
 						<br/>Here are some <a href="./fun.html">Fun Links</a>.
 
+					</br> </br> HOW-TO Guides for Emory CS Graduate Students
+					</br> <a href="https://cs.emory.edu/~donken/howto/How_To_Setup_Emory_Webpage.pdf" target="_blank">Set-up Emory Webpage</a> (November 2019 Emory SIAM Event)
+					</br>  <a href="https://cs.emory.edu/~donken/howto/CS_PhD_CandidacyAndMasters_HowTo.pdf" target="_blank">Apply for PhD Candidacy and Interim Degree</a>
+
 				</div>
 			</section>
 
