--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
 
 						<h3> &nbsp; </h3>
 						<b>
-						<h3>Past Presentations</h3>
-		                SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
+						<h3>Presentations</h3>
+		                SIAM Annual Meeting, Jul 2020, <a href="./Onken_SIAM_AN2020_poster.pdf" target="_blank">poster</a>
+
+                        </br> SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
 		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a>
 	                    </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a>
 		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf" target="_blank">poster</a>
