--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 						Our dataset contians cellphone data from the H1N1 outbreak in 2009-2010 and linked health data. We develop a classifier to determine/predict sickness based on human behavior changes around Date of Diagnosis. Motivation: give health officials a more real-time and accurate estimation of sick individuals as an outbreak is occuring.
 						</p>
 						
-						<p> <b> Lunar study with Juan B. Gutierrez in the Biomathematics Research Group.</b> (2014-2016)
+						<p> <b> Lunar study with Juan B. Gutierrez in UGA's Biomathematics Research Group.</b> (2014-2016)
 						<br/>
 						Analysis of 56 million natality records and sex ratio correlations.
 						</p>
 
-						<p> <b> Comparison of Parallelization Methods with Juan B. Gutierrez in the Biomathematics Research Group</a>.</b> (2014)
+						<p> <b> Comparison of Parallelization Methods with Juan B. Gutierrez in UGA's Biomathematics Research Group</a>.</b> (2014)
 						<br/>
 						Exploration of MPI, CUDA, and OpenCL. Application of MPI to Geneset Enrichment Analysis (GSEA).
 						</p>
