reduced image size

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		<header>
 			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD Candidate &nbsp;
 				<ul class="icons"  style="display:inline;" >
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar-square ai-1x"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar-square ai-1x" target="_blank"></a></li>
+					<li><a href="https://github.com/donken" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 				</ul>
 		</header>
 		<nav id="nav">
