--- a/fun.html
+++ b/fun.html
@@ -63,23 +63,23 @@
     				<div class="my-slider" align="right"  style="font-size:20px; overflow: hidden;" >
     						<ul>
     							<li>
-    								<img src="images/gallery/whiteboardFixed.jpg" alt="Derek Computer Science" />
+    								<img src="https://derekonken.com/images/gallery/whiteboardFixed.jpg" alt="Derek Computer Science" />
     								<br />Research in Action 2018
     							</li>
     							<li>
-    								<img src="images/gallery/alaskaWaterfallFixed.jpg" alt="Derek Computer Science" />
+    								<img src="https://derekonken.com/images/gallery/alaskaWaterfallFixed.jpg" alt="Derek Computer Science" />
     								<br />White Pass, Alaska 2018
     							</li>
     							<li>
-    								<img src="images/gallery/coliseumFixed.jpg" alt="Derek Computer Science" />
+    								<img src="https://derekonken.com/images/gallery/coliseumFixed.jpg" alt="Derek Computer Science" />
     								<br />Rome, Italy 2017
     							</li>
     							<li>
-    								<img src="images/gallery/swedenFixed.jpg" alt="Derek Computer Science" />
+    								<img src="https://derekonken.com/images/gallery/swedenFixed.jpg" alt="Derek Computer Science" />
     								<br />Stockholm, Sweden 2018
     							</li>
     							<li>
-    								<img src="images/gallery/parthenonFixed.jpg" alt="Derek Computer Science" />
+    								<img src="https://derekonken.com/images/gallery/parthenonFixed.jpg" alt="Derek Computer Science" />
     								<br />Athens, Greece 2019
     							</li>
     						</ul>
