--- a/fun.html
+++ b/fun.html
@@ -28,7 +28,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD Candidate &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="./index.html">Derek Onken</a> </h1> PhD Candidate &nbsp;
 				<ul class="icons"  style="display:inline;" >
 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
                     <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar-square ai-1x" target="_blank"></a></li>
