--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					
 					<p>I'm Derek Onken, a PhD Candidate in the Computer Science and Informatics Program at Emory University. I focus on data-intensive problems, ranging from the mathematical theory to implementation, especially for application to problems with biological motivation.</p>
 
-                    <p>(Such approaches include the following buzzwords: machine learning, deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows)</p>
+                    <p>(Such approaches include the following buzzwords: machine learning, deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
 					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
 
 
