--- a/index.html
+++ b/index.html
@@ -125,23 +125,24 @@
 						</p>
 
 						<b>
-						<h3> Preprints</h3>
+						<h3> Publications/Preprints</h3>
+						D Onken, S Wu Fung, X Li, L Ruthotto.
+						OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport. Accepted AAAI 2021.</br> 
+						 <a href="https://arxiv.org/abs/2006.00104" target="_blank">paper</a> &nbsp; 
+						 <a href="https://github.com/EmoryMLIP/OT-Flow" target="_blank">code</a> &nbsp;
+						</br> 
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
 						A Neural Network Approach Applied to Multi-Agent Optimal Control. 2020.</br> 
 						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
 						 <!-- code &nbsp; -->
 						 <a href="https://imgur.com/a/HWqlIot" target="_blank">videos</a>
 						</br> 
-						D Onken, S Wu Fung, X Li, L Ruthotto.
-						OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport. 2020.</br> 
-						 <a href="https://arxiv.org/abs/2006.00104" target="_blank">paper</a> &nbsp; 
-						 <a href="https://github.com/EmoryMLIP/OT-Flow" target="_blank">code</a> &nbsp;
-						</br> 
 						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. 2020.  </br>  
 							<a href="https://arxiv.org/abs/2005.13420" target="_blank">paper</a>  &nbsp;
 							<a href="https://github.com/EmoryMLIP/DOvsOD_NeuralODEs" target="_blank">code</a> &nbsp;
 							<a href="https://imgur.com/nWxwVoe" target="_blank">videos</a>
 						</b>
+
 
 
 						<h3> &nbsp; </h3>
