--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<h3>About</h3>
 
 					
-					<p>I'm Derek Onken, a PhD Candidate in the Computer Science and Informatics Program at Emory University. I focus on data-intensive problems, ranging from the mathematical theory to implementation, especially for application to problems with biological motivation.</p>
+					<p>I'm Derek Onken, a PhD Candidate in the Computer Science and Informatics Program at Emory University. I focus on data-intensive problems predominantly in the overlap of mathematics and computer science. Ultimately, I enjoy applying the theory to develop solutions for practical problems.</p>
 
                     <p>(Such approaches include the following buzzwords: machine learning, deep learning, neural networks, big data, statistical analysis, GPUs, numerical optimization, continuous normalizing flows, optimal control)</p>
 					<!--My strengths lie in mathematical approaches to data analysis which tends to encompass statistical analysis and machine learning methodologies.-->
@@ -131,13 +131,17 @@
 						 <a href="https://arxiv.org/abs/2006.00104" target="_blank">paper</a> &nbsp; 
 						 <a href="https://github.com/EmoryMLIP/OT-Flow" target="_blank">code</a> &nbsp;
 						</br> 
+						 Y Vigfusson, T Karlsson, D Onken, et al.
+						Cellphone Traces Reveal Infection-Associated Behavioral Change. Accepted PNAS 2021.</br> 
+						(links to come)
+                        </br> 
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
-						A Neural Network Approach Applied to Multi-Agent Optimal Control. 2020.</br> 
+						A Neural Network Approach Applied to Multi-Agent Optimal Control. arXiv 2020.</br> 
 						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
 						 <!-- code &nbsp; -->
 						 <a href="https://imgur.com/a/HWqlIot" target="_blank">videos</a>
 						</br> 
-						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. 2020.  </br>  
+						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. arXiv 2020.  </br>  
 							<a href="https://arxiv.org/abs/2005.13420" target="_blank">paper</a>  &nbsp;
 							<a href="https://github.com/EmoryMLIP/DOvsOD_NeuralODEs" target="_blank">code</a> &nbsp;
 							<a href="https://imgur.com/nWxwVoe" target="_blank">videos</a>
