youtube embedding complete

--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -57,10 +57,11 @@
 			<section id="one">
 				<div class="container" align=center>
 
-                    <video width="80%" style="max-width:640px;" controls controlsList="nodownload">
+                    <!--<video width="80%" style="max-width:640px;" controls controlsList="nodownload">
                         <source src="https://youtu.be/cmHwTXm_ots" type="video/mp4">
                         Your browser does not support the video tag.
-                    </video>
+                    </video>-->
+                    <iframe width="1120" height="630" src="https://www.youtube.com/embed/cmHwTXm_ots" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div style="width:80%; text-align:center; max-width:640px;" >  <b> Talk February 2021</b></div>
 					</br> Accompanying slides <a href="./2021AAAIslides.pdf" target="_blank">link</a>
 
