add AAAI materials and links

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 						 <a href="https://github.com/EmoryMLIP/OT-Flow" target="_blank">code</a> &nbsp;
 						</br> 
 						 Y Vigfusson*, T Karlsson*, D Onken*, et al.
-						Cellphone Traces Reveal Infection-Associated Behavioral Change. Proceedings of the National Academy of Science 2021.</br> 
+						Cellphone Traces Reveal Infection-Associated Behavioral Change. Proceedings of the National Academy of Science 2021.  * denotes co-first author
+						</br> 
 						 <a href="https://www.pnas.org/content/118/6/e2005241118" target="_blank">paper</a> &nbsp;
                          <a href="https://github.com/SimBioSysLab/cdr-open-code" target="_blank">code</a> &nbsp;
                         </br> 
@@ -154,7 +155,7 @@
 						<b>
 						<h3>Presentations</h3>
                         
-                              AAAI Conference on Artificial Intelligence, Feb 2021, Coming Soon
+                              AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a>  &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
                         </br> SIAM Annual Meeting, Jul 2020, <a href="./Onken_SIAM_AN2020_poster.pdf" target="_blank">poster</a>
                         </br> SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
 		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a>
