--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -28,11 +28,12 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="./index.html">Derek Onken</a> </h1> PhD Candidate &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD Candidate &nbsp;
 				<ul class="icons"  style="display:inline;" >
-					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar-square ai-1x" target="_blank"></a></li>
-					<li><a href="https://github.com/donken" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+<!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
+					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=VqH6AJ8AAAAJ&hl=en" class="ai ai-google-scholar" style="font-size: 1.1em;" target="_blank"></a></li>
+					<li><a href="https://github.com/donken" class="icon brands fa-github" style="font-size: 1.1em;" target="_blank"><span class="label">Github</span></a></li>
 				</ul>
 		</header>
 		<nav id="nav">
