--- a/index.html
+++ b/index.html
@@ -126,23 +126,23 @@
 
 						<b>
 						<h3> Publications/Preprints</h3>
+						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
+						A Neural Network Approach Applied to Multi-Agent Optimal Control. European Control Conference 2021 [Accepted].</br> 
+						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
+						 <!-- code &nbsp; -->
+						 <a href="https://imgur.com/a/HWqlIot" target="_blank">videos</a>
+						</br> 
 						D Onken, S Wu Fung, X Li, L Ruthotto.
 						OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport. AAAI Conference on Artificial Intelligence 2021.</br> 
 						 <a href="https://arxiv.org/abs/2006.00104" target="_blank">paper</a> &nbsp; 
 						 <a href="https://github.com/EmoryMLIP/OT-Flow" target="_blank">code</a> &nbsp;
 						</br> 
 						 Y Vigfusson*, T Karlsson*, D Onken*, et al.
-						Cellphone Traces Reveal Infection-Associated Behavioral Change. Proceedings of the National Academy of Science 2021.  * denotes co-first author
+						Cellphone Traces Reveal Infection-Associated Behavioral Change. Proceedings of the National Academy of Science 2021. &nbsp;  * denotes co-first author
 						</br> 
 						 <a href="https://www.pnas.org/content/118/6/e2005241118" target="_blank">paper</a> &nbsp;
                          <a href="https://github.com/SimBioSysLab/cdr-open-code" target="_blank">code</a> &nbsp;
                         </br> 
-						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
-						A Neural Network Approach Applied to Multi-Agent Optimal Control. arXiv 2020.</br> 
-						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
-						 <!-- code &nbsp; -->
-						 <a href="https://imgur.com/a/HWqlIot" target="_blank">videos</a>
-						</br> 
 						D Onken and L Ruthotto. Discretize-Optimize vs. Optimize-Discretize for Time-Series Regression and Continuous Normalizing Flows. arXiv 2020.  </br>  
 							<a href="https://arxiv.org/abs/2005.13420" target="_blank">paper</a>  &nbsp;
 							<a href="https://github.com/EmoryMLIP/DOvsOD_NeuralODEs" target="_blank">code</a> &nbsp;
