--- a/index.html
+++ b/index.html
@@ -154,11 +154,17 @@
 						<h3> &nbsp; </h3>
 						<b>
 						<h3>Presentations</h3>
-                        
-                              AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a>  &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
+                       
+                       	Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.gerad.ca/en/events/1863" target="_blank">link</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> 
+                       	</br> &nbsp; &nbsp; <font size="-1">Thanks to Peter E. Caines, Aditya Mahajan, Shuang Gao, Rinel Foguen Tchuendom, and Yaroslav Salii for the invitation. </font>
+                        </br> AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a>  &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
+                        </br> &nbsp; &nbsp; <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font>
                         </br> SIAM Annual Meeting, Jul 2020, <a href="./Onken_SIAM_AN2020_poster.pdf" target="_blank">poster</a>
+                        </br> &nbsp; &nbsp; <font size="-1"> Thanks to the SIAM AN20 organizers for the opportunity. </font>
                         </br> SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
+                        </br> &nbsp; &nbsp; <font size="-1"> Thanks to Harbir Antil, Thomas Brown, and Ratna Khatri for the invitation.  </font>
 		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a>
+		                </br> &nbsp; &nbsp; <font size="-1"> Thanks to the IPAM organizers for the opportunity.  </font>
 	                    </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a>
 		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf" target="_blank">poster</a>
 		                </br> Amazon Graduate Research Symposium, Oct 2017, <a href="./2017AmazonPoster.pdf" target="_blank">poster</a>
