direct my name to the index page

--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -28,7 +28,7 @@
 	<!-- Header -->
 	<section id="header">
 		<header>
-			<h1 style="display:inline;" id="logo"><a href="#">Derek Onken</a> </h1> PhD Candidate &nbsp;
+			<h1 style="display:inline;" id="logo"><a href="./index.html#">Derek Onken</a> </h1> PhD Candidate &nbsp;
 				<ul class="icons"  style="display:inline;" >
 <!-- 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li> -->
 					<li><a href="https://www.linkedin.com/in/derekonken/" class="icon brands fa-linkedin" style="font-size: 1.1em;" target="_blank"><span class="label">LinkedIn</span></a></li>
