--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
 						<b>
 						<h3>Presentations</h3>
                        
-                       	Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.gerad.ca/en/events/1863" target="_blank">link</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> 
+                       	Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a>
                        	</br> &nbsp; &nbsp; <font size="-1">Thanks to Peter E. Caines, Aditya Mahajan, Shuang Gao, Rinel Foguen Tchuendom, and Yaroslav Salii for the invitation. </font>
-                        </br> AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a>  &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
+                        </br> AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font>
                         </br> SIAM Annual Meeting, Jul 2020, <a href="./Onken_SIAM_AN2020_poster.pdf" target="_blank">poster</a>
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to the SIAM AN20 organizers for the opportunity. </font>
