added wuchen invite

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                         <!-- 
                         (<a href="https://github.com/EmoryMLIP/DynamicBlocks" target="_blank">public code</a>) More specifically, we ask if current reliance on gradient-based methods necessarily results in the most efficient training, question the stability of presented problems and the ability of current architectures to handle ill-posed problems, and view current architectures from a scientific computing perspective.</p> Most current experiments involve applications of higher-order schemes, bound constraints, and the Discretize-Optimize approach.-->
-						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App with <a href="http://www.mathcs.emory.edu/~eugene/" target="_blank"> Eugene Agichtein </a> as part of his  <a href="https://github.com/emory-irlab" target="_blank">IRLAB</a>.</b> (2017)
+						<p> <b> Parkinson's Disease Telemonitoring and Voice Analysis via Mobile App with  Eugene Agichtein </a> as part of his IRLAB</a>.</b> (2017)
 						<br/>
 						Collecting and analyzing voice data, touch pressure, and rest tremor to detect Parkinson's disease symptoms via remote patient monitoring. Building machine learning classifier using motor and vocal features extracted from these patients.
 						</p>
@@ -129,7 +129,7 @@
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
 						A Neural Network Approach Applied to Multi-Agent Optimal Control. European Control Conference 2021 [Accepted].</br> 
 						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
-						 <!-- code &nbsp; -->
+						 <a href="https://github.com/donken/NeuralOC" target="_blank">code</a> &nbsp;
 						 <a href="https://imgur.com/a/HWqlIot" target="_blank">videos</a>
 						</br> 
 						D Onken, S Wu Fung, X Li, L Ruthotto.
@@ -155,15 +155,33 @@
 						<b>
 						<h3>Presentations</h3>
                        
-                       	Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a>
+                       	<h6> A Neural Network Approach for High-Dimensional Optimal Control @ </h6>
+                       	Optimal Transport and Mean Field Games Seminar, University of South Carolina, Mar 2021, talk
+                       	</br> &nbsp; &nbsp; <font size="-1">Thanks to Wuchen Li for the invitation. </font>
+                       	</br>UCLA Applied Mathematics Seminar, Mar 2021, talk
+                       	</br> &nbsp; &nbsp; <font size="-1">Thanks to Levon Nurbekyan for the invitation. </font>
+                       	</br> Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a>
                        	</br> &nbsp; &nbsp; <font size="-1">Thanks to Peter E. Caines, Aditya Mahajan, Shuang Gao, Rinel Foguen Tchuendom, and Yaroslav Salii for the invitation. </font>
-                        </br> AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
+                       	
+
+                       	<br><br>
+                       	<h4> OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport @ </h4>
+                       	Georgia Scientific Computing Symposium, Feb 2021, poster
+                       	</br> &nbsp; &nbsp; <font size="-1"> Thanks to the organizers at UGA for the opportunity. </font>
+                        </br>AAAI Conference on Artificial Intelligence, Feb 2021, <a href="./aaaivideo.html" target="_blank">talk</a> &nbsp; <a href="./2021AAAIslides.pdf" target="_blank">slides</a> &nbsp; <a href="./2021AAAIPoster.pdf" target="_blank">poster</a>
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to the AAAI organizers for the opportunity. </font>
-                        </br> SIAM Annual Meeting, Jul 2020, <a href="./Onken_SIAM_AN2020_poster.pdf" target="_blank">poster</a>
+                        </br> SIAM Annual Meeting, Jul 2020, poster
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to the SIAM AN20 organizers for the opportunity. </font>
-                        </br> SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
+
+                        <br><br>
+                        <h4> Discretize-Optimize Methods for Neural ODEs in Continuous Normalizing Flows @ </h4>
+                        SIAM Mathematics of Data Science, Jun 2020, <a href="./2020SIAMMDSslides.pdf" target="_blank">slides</a>
                         </br> &nbsp; &nbsp; <font size="-1"> Thanks to Harbir Antil, Thomas Brown, and Ratna Khatri for the invitation.  </font>
-		                </br> Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a>
+
+
+                        <br><br>
+                        <h4> Other </h4>
+		                Deep Learning in Medical Applications Workshop at Institute for Pure and Applied Mathematics (IPAM), Jan 2020, <a href="./2020LungCancerPoster.pdf" target="_blank">poster</a>
 		                </br> &nbsp; &nbsp; <font size="-1"> Thanks to the IPAM organizers for the opportunity.  </font>
 	                    </br> Emory Scientific Computing Seminar, Apr 2019, <a href="./OnkenPresentation.pdf" target="_blank">slides</a>
 		                </br> Georgia Scientific Computing Symposium, Feb 2019, <a href="./2019HORKNetPoster.pdf" target="_blank">poster</a>
