added tac arxiv

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 						<b>
 						<h3> Publications/Preprints</h3>
 						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
+						A Neural Network Approach for High-Dimensional Optimal Control. arXiv 2021</br> 
+						 <a href="https://arxiv.org/abs/2104.03270" target="_blank">paper</a> &nbsp;
+						 <a href="https://github.com/donken/NeuralOC" target="_blank">code</a> &nbsp;
+						 <a href="https://imgur.com/a/eWr6sUb" target="_blank">videos</a>
+						</br> 
+						D Onken, L Nurbekyan, X Li, S Wu Fung, S Osher, L Ruthotto.
 						A Neural Network Approach Applied to Multi-Agent Optimal Control. European Control Conference 2021 [Accepted].</br> 
 						 <a href="https://arxiv.org/abs/2011.04757" target="_blank">paper</a> &nbsp;
 						 <a href="https://github.com/donken/NeuralOC" target="_blank">code</a> &nbsp;
