added derekonken.com email

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 					<br/>Emory University
 					<br/>Atlanta, GA 30322
 					<br/>
-					<br/><b>Email:</b><br/>donken [at] emory [dot] edu</p>
+					<br/><b>Email:</b><br/>derek [at] derekonken [dot] com</p>
 					
 				</div>
 			</section>
