--- a/aaaivideo.html
+++ b/aaaivideo.html
@@ -63,10 +63,11 @@
                         Your browser does not support the video tag.
                     </video>-->
                     <iframe width="720" height="405" src="https://www.youtube.com/embed/cmHwTXm_ots" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div style="width:80%; text-align:center; max-width:640px;" >  <b> Talk February 2021</b></div>
-					</br> Accompanying slides <a href="./2021AAAIslides.pdf" target="_blank">link</a>
+                    <div style="width:80%; text-align:center; max-width:640px;" >  <b> AAAI, February 2021</b></div>
+					</br> Accompanying Slides <a href="./2021AAAIslides.pdf" target="_blank">link</a>
+					</br> Proceedings <a href="https://ojs.aaai.org/index.php/AAAI/article/view/17113" target="_blank">link</a>
                     </br>
-                    </br> We extend our thanks to Reza Karimi for the audio-visual quality
+                    </br> We extend thanks to Reza Karimi for the audio-visual quality
 
 
 			</section>
