--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
                        	</br> Virtual Informal Systems Seminar (VISS) at Centre for Intelligent Machines (CIM) at McGill and the Groupe d'études et de Recherche en Analyse des Décisions (GERAD), Feb 2021, <a href="https://www.youtube.com/watch?v=ueatPJkzqmE&ab_channel=GERADRecherche" target="_blank">talk</a>  &nbsp; <a href="./VISS2021.pdf" target="_blank">slides</a> &nbsp; <a href="https://www.gerad.ca/en/events/1863" target="_blank">abstract</a>
                        	</br> &nbsp; &nbsp; <font size="-1">Thanks to Peter E. Caines, Aditya Mahajan, Shuang Gao, Rinel Foguen Tchuendom, and Yaroslav Salii for the invitation. </font>
                        	
+                       	<br><br>
+                       	<h6> A Neural Network Approach Applied to Multi-Agent Optimal Control @ </h6>
+                       	European Control Conference, Jun 2021, <a href="./ecc2021.html" target="_blank">talk</a>
+                       	</br> &nbsp; &nbsp; <font size="-1">Thanks to the ECC organizers for the opportunity. </font>
+
 
                        	<br><br>
                        	<h4> OT-Flow: Fast and Accurate Continuous Normalizing Flows via Optimal Transport @ </h4>
